add post users documentation
